Complete search for customers